--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ p {
   transition: 0.5s ease-out;
   z-index: 4;
 }
+#side-bar.active{
+  left: 0;
+}
 .toggle-btn {
   position: absolute;
   top: 30px;
